// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionsTable component component render tests snapshots snapshot: empty (no list data) 1`] = `""`;

exports[`SubmissionsTable component component render tests snapshots snapshot: happy path 1`] = `
<DataTable
  FilterStatusComponent={[MockFunction FilterStatusComponent]}
  bulkActions={
    Array [
      [MockFunction this.selectedBulkAction],
    ]
  }
  columns={
    Array [
      Object {
        "Header": "Username",
        "accessor": "username",
      },
      Object {
        "Cell": [MockFunction this.formatDate],
        "Header": "Learner submission date",
        "accessor": "dateSubmitted",
        "disableFilters": true,
      },
      Object {
        "Cell": [MockFunction this.formatGrade],
        "Header": "Grade",
        "accessor": "score",
        "disableFilters": true,
      },
      Object {
        "Cell": [MockFunction this.formatStatus],
        "Filter": "MultiSelectDropdownFilter",
        "Header": "Grading status",
        "accessor": "gradingStatus",
        "filter": "includesValue",
        "filterChoices": Array [
          Object {
            "name": "Ungraded",
            "value": "ungraded",
          },
          Object {
            "name": "Grading Completed",
            "value": "graded",
          },
          Object {
            "name": "Currently being graded by someone else",
            "value": "locked",
          },
          Object {
            "name": "You are currently grading this response",
            "value": "in-progress",
          },
        ],
      },
    ]
  }
  data={
    Array [
      Object {
        "dateSubmitted": "9:05:54 PM",
        "gradingStatus": "ungraded",
        "score": Object {
          "pointsEarned": 1,
          "pointsPossible": 10,
        },
        "username": "username-1",
      },
      Object {
        "dateSubmitted": "11:52:34 PM",
        "gradingStatus": "graded",
        "score": Object {
          "pointsEarned": 2,
          "pointsPossible": 10,
        },
        "username": "username-2",
      },
      Object {
        "dateSubmitted": "9:07:30 PM",
        "gradingStatus": "in-progress",
        "score": Object {
          "pointsEarned": 3,
          "pointsPossible": 10,
        },
        "username": "username-3",
      },
    ]
  }
  defaultColumnValues={
    Object {
      "Filter": "TextFilter",
    }
  }
  initialState={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
    }
  }
  isFilterable={true}
  isPaginated={true}
  isSelectable={true}
  isSortable={true}
  itemCount={3}
  numBreakoutFilters={2}
  tableActions={
    Array [
      Object {
        "buttonText": "View all responses",
        "className": "view-all-responses-btn",
        "handleClick": [MockFunction this.handleViewAllResponsesClick],
        "variant": "primary",
      },
    ]
  }
>
  <DataTable.TableControlBar />
  <DataTable.Table />
  <DataTable.TableFooter />
</DataTable>
`;

exports[`SubmissionsTable component component render tests snapshots snapshot: team happy path 1`] = `
<DataTable
  FilterStatusComponent={[MockFunction FilterStatusComponent]}
  bulkActions={
    Array [
      [MockFunction this.selectedBulkAction],
    ]
  }
  columns={
    Array [
      Object {
        "Header": "Team name",
        "accessor": "teamName",
      },
      Object {
        "Cell": [MockFunction this.formatDate],
        "Header": "Team submission date",
        "accessor": "dateSubmitted",
        "disableFilters": true,
      },
      Object {
        "Cell": [MockFunction this.formatGrade],
        "Header": "Grade",
        "accessor": "score",
        "disableFilters": true,
      },
      Object {
        "Cell": [MockFunction this.formatStatus],
        "Filter": "MultiSelectDropdownFilter",
        "Header": "Grading status",
        "accessor": "gradingStatus",
        "filter": "includesValue",
        "filterChoices": Array [
          Object {
            "name": "Ungraded",
            "value": "ungraded",
          },
          Object {
            "name": "Grading Completed",
            "value": "graded",
          },
          Object {
            "name": "Currently being graded by someone else",
            "value": "locked",
          },
          Object {
            "name": "You are currently grading this response",
            "value": "in-progress",
          },
        ],
      },
    ]
  }
  data={
    Array [
      Object {
        "dateSubmitted": "9:05:54 PM",
        "gradingStatus": "ungraded",
        "score": Object {
          "pointsEarned": 1,
          "pointsPossible": 10,
        },
        "teamName": "teamName-1",
      },
      Object {
        "dateSubmitted": "11:52:34 PM",
        "gradingStatus": "graded",
        "score": Object {
          "pointsEarned": 2,
          "pointsPossible": 10,
        },
        "teamName": "teamName-2",
      },
      Object {
        "dateSubmitted": "9:07:30 PM",
        "gradingStatus": "in-progress",
        "score": Object {
          "pointsEarned": 3,
          "pointsPossible": 10,
        },
        "teamName": "teamName-3",
      },
    ]
  }
  defaultColumnValues={
    Object {
      "Filter": "TextFilter",
    }
  }
  initialState={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
    }
  }
  isFilterable={true}
  isPaginated={true}
  isSelectable={true}
  isSortable={true}
  itemCount={3}
  numBreakoutFilters={2}
  tableActions={
    Array [
      Object {
        "buttonText": "View all responses",
        "className": "view-all-responses-btn",
        "handleClick": [MockFunction this.handleViewAllResponsesClick],
        "variant": "primary",
      },
    ]
  }
>
  <DataTable.TableControlBar />
  <DataTable.Table />
  <DataTable.TableFooter />
</DataTable>
`;
